--- a/html-basic.html
+++ b/html-basic.html
@@ -137,6 +137,7 @@
   </fieldset>
   <button type="submit">提交</button>
   <button type="reset">重置</button>
+  <a name="bottom"></a>
 </body>
 
 </html>
