--- a/html-basic.html
+++ b/html-basic.html
@@ -137,6 +137,69 @@
   </fieldset>
   <button type="submit">提交</button>
   <button type="reset">重置</button>
+  <hr>
+  <table border="1">
+    <caption>货品列表</caption>
+    <col>
+    <col bgcolor=red>
+    <thead>
+      <tr>
+        <th>编号</th>
+        <th>品名</th>
+        <th>进价</th>
+        <th>出价</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>001</td>
+        <td>苹果</td>
+        <td rowspan="2">5</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <td>001</td>
+        <td>桔子</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <td>001</td>
+        <td>香蕉</td>
+        <td>5</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <td>001</td>
+        <td>山竹</td>
+        <td>5</td>
+        <td>8</td>
+      </tr>
+    </tbody>
+
+  </table>
+  <hr>
+  <img src="https://drscdn.500px.org/photo/174778125/m%3D1170_k%3D1/2841ccf2a3720e8e794a6a6930f6ff2c" alt="加载失败"
+    usemap="#mtymap" width="300">
+  <map name="mtymap">
+    <area shape="rect" coords="59,117,245,208" href="https://www.mi.com/" alt="" target="_blank">
+    <area shape="circle" coords="140,276,80" href="" alt="">
+    <area shape="poly" coords="53,88,140,106,216,79,262,303,187,436,22,307" href="" alt="">
+  </map>
+  <hr>
+  <a href="https://www.mi.com/" target="framex">点击我会在下面的frame里面打开小米商场，但为什么打不开呢?</a>
+  <br>
+  <iframe src="https://nodejs.org" frameborder="0" name="framex" frameorder="1"></iframe>
+
+  <div>
+    <p>怎样&nbsp;&nbsp;&nbsp;&nbsp;在这两个字之间空这么大呢？</p>
+    <br>
+    <p>
+      怎样在页面中显示下面的内容呢？
+      <br>
+      &lt;span>&lt;/span>
+    </p>
+  </div>
+
   <a name="bottom"></a>
 </body>
 
