--- a/basic-coding.html
+++ b/basic-coding.html
@@ -63,8 +63,8 @@ console.log(x);
 <script id="ch0103/09" type="x">
   var r = Number(prompt("r"))
   var diameter = 2 * r
-  var perimeter = 2 * Math.PI * r
-  var area = Math.PI * r * r
+  var perimeter = 2 * 3.14159 * r
+  var area = 3.14159 * r * r
   console.log(diameter.toFixed(4))
   console.log(perimeter.toFixed(4))
   console.log(area.toFixed(4))
