--- a/basic-coding.html
+++ b/basic-coding.html
@@ -60,14 +60,12 @@ console.log(x);
   console.log(c.toFixed(5))
 </script>
 
-<script id="ch0103/09" type="x">
-  var r = Number(prompt("r"))
+<script id="ch0103/09" type="">
+  var r = Number(prompt())
   var diameter = 2 * r
   var perimeter = 2 * 3.14159 * r
   var area = 3.14159 * r * r
-  console.log(diameter.toFixed(4))
-  console.log(perimeter.toFixed(4))
-  console.log(area.toFixed(4))
+  console.log(diameter.toFixed(4) + " " + perimeter.toFixed(4) + " "+ area.toFixed(4))
 
 </script>
 
@@ -160,7 +158,7 @@ var result = a * b
 console.log(result);
 </script>
 
-<script id="ch0103/20">
+<script id="ch0103/20" type="x">
   var a = Number(prompt(""))
   var result = Math.pow(2, a)
   console.log(result)
