--- a/basic-coding.html
+++ b/basic-coding.html
@@ -60,7 +60,7 @@ console.log(x);
   console.log(c.toFixed(5))
 </script>
 
-<script id="ch0103/09" type="">
+<script id="ch0103/09" type="x">
   var r = Number(prompt())
   var diameter = 2 * r
   var perimeter = 2 * 3.14159 * r
@@ -89,14 +89,12 @@ console.log(x);
   console.log(v.toFixed(2))
 </script>
 
-<script id="ch0103/13" type="x ">
+<script id="ch0103/13" type="">
   var n = Number(prompt("n"))
   var one = n % 10
   var ten = (n % 100 - one) / 10
   var hundred = (n - (ten * 10) - one) / 100
-  console.log(one)
-  console.log(ten)
-  console.log(hundred)
+  console.log(one + "" + ten + "" + hundred)
 </script>
 
 <script id="ch0103/14" type="x">
