--- a/basic-coding.html
+++ b/basic-coding.html
@@ -89,7 +89,7 @@ console.log(x);
   console.log(v.toFixed(2))
 </script>
 
-<script id="ch0103/13" type="">
+<script id="ch0103/13" type="x">
   var n = Number(prompt("n"))
   var one = n % 10
   var ten = (n % 100 - one) / 10
@@ -160,4 +160,11 @@ console.log(result);
   var a = Number(prompt(""))
   var result = Math.pow(2, a)
   console.log(result)
+</script>
+
+<script id="ch0104/01">
+  var n = Number(prompt("n"))
+  if (n > 0) { console.log("positive") }
+  else if (n === 0) { console.log("zero") }
+  else if (n < 0) { console.log("negative") }
 </script>
