--- a/basic-coding.html
+++ b/basic-coding.html
@@ -409,7 +409,7 @@ console.log(cost)
   console.log(result)
 </script>
 
-<script id="ch0104/20" type="x">
+<script id="ch0104/x20" type="x">
   var a = Number(prompt())
   var b = Number(prompt())
   var c = Number(prompt())
