--- a/basic-coding.html
+++ b/basic-coding.html
@@ -594,7 +594,7 @@ console.log(cost)
 
 </script>
 
-<script id="ch0105/10" type="">
+<script id="ch0105/x10" type="">
   var time = Number(prompt())
   var date = 0
   var count = 0
