--- a/basic-coding.html
+++ b/basic-coding.html
@@ -594,7 +594,20 @@ console.log(cost)
 
 </script>
 
-<script id="ch0105/x10" type="">
+<script id="ch0105/10" type="">
+    var min = Number(prompt("min"))
+      var max = Number(prompt("max"))
+      var sum = 0
+      while (min <= max) {
+        if (min % 17 == 0) {
+          sum = sum + min
+        }
+        min = min + 1
+      }
+      console.log(sum);
+</script>
+
+<script id="ch0105/11" type="x">
   var time = Number(prompt())
   var date = 0
   var count = 0
@@ -607,10 +620,10 @@ console.log(cost)
     if (date == 1) {
       one_count = one_count + 1
     }
-    if (date % 5 == 0 && date % 10 !== 0) {
+    if (date == 5) {
       five_count = five_count + 1
     }
-    if (date % 10 == 0 && date % 5 !== 0) {
+    if (date == 10) {
       ten_count = ten_count +1
     }
   }
