--- a/basic-coding.html
+++ b/basic-coding.html
@@ -594,7 +594,7 @@ console.log(cost)
 
 </script>
 
-<script id="ch0105/10" type="">
+<script id="ch0105/10" type="x">
     var min = Number(prompt("min"))
       var max = Number(prompt("max"))
       var sum = 0
@@ -631,3 +631,47 @@ console.log(cost)
   console.log(five_count);
   console.log(ten_count);
 </script>
+
+<script id="ch0105/12" type="x">
+  var N = Number(prompt("N"))
+  var m = Number(prompt("m"))
+  var count = 0
+  var time = 0
+  var sameTime = 0
+  var date = null
+  while (count < N) {
+    date = Number(prompt())
+    count = count + 1
+    if (date == m) {
+      sameTime = sameTime + 1
+    }
+  }
+  console.log(sameTime);
+</script>
+
+<script id="ch0105/13" type="x">
+  var a = Number(prompt())
+  var n = Number(prompt())
+  var count = 0
+  var result = 1
+  while (count < n ) {
+    count = count + 1
+    result = result * a
+  }
+  console.log(result);
+
+</script>
+
+<script id="ch0105/14" type="x">
+  var x = Number(prompt())
+  var n = Number(prompt())
+  var count = 0
+  while (count < n) {
+    count = count + 1
+    x = x + x * 0.001
+  }
+  console.log(x.toFixed(4));
+
+</script>
+
+<script id="ch0105/15"></script>
