--- a/basic-coding.html
+++ b/basic-coding.html
@@ -714,7 +714,7 @@ console.log(cost)
 <script id="ch0105/x17" type="x">
 </script>
 
-<script id="ch0105/x18" type="">
+<script id="ch0105/18" type="">
   var n = Number(prompt())
   var x = null
   var y = null
