--- a/basic-coding.html
+++ b/basic-coding.html
@@ -427,8 +427,8 @@ console.log(cost)
   }
   else {
     delta = -delta
-    x1 = (-b / 2 / a).toFixed(5) + "" + (+Math.sqrt(delta) / 2 / a).toFixed(5) + "i"
-    x2 = (-b / 2 / a).toFixed(5) + "" + (-Math.sqrt(delta) / 2 / a).toFixed(5) + "i"
+    x1 = ((-b / 2 / a).toFixed(5)) + "+" + ((+Math.sqrt(delta) / 2 / a).toFixed(5)) + "i"
+    x2 = ((-b / 2 / a).toFixed(5)) + "+" + ((-Math.sqrt(delta) / 2 / a).toFixed(5)) + "i"
     console.log("x1=" + x1 + ";" + "x2=" + x2);
   }
 
@@ -751,16 +751,20 @@ console.log(cost)
 
 </script>
 
-<script id="ch0105/20" type="">
-  var originalHeight = Number(prompt())
-  var ten_time_height = 0
-  var height = 0
+<script id="ch0105/20" type="x">
+  var height = Number(prompt())
   var total = 0
-  for (var count = 0 ; count < 10; count++){
-    if (counnt == 0) {
-      total = originalHeight + 0.5 * originalHeight
-    }
-      total = total + height
-      height = 0.5 * height
+  for (var count = 0 ; count < 10; count = count + 1){
+    total = total + height + 0.5 * height
+    var height = 0.5 * height
+  }
+  console.log((total - height).toFixed(4));
+  console.log(height.toFixed(7));
+</script>
+
+<script id="ch0105/x21" type="">
+  var n = Number(prompt())
+  if (n == 0) {
+
   }
 </script>
