--- a/basic-coding.html
+++ b/basic-coding.html
@@ -780,8 +780,9 @@ console.log(cost)
       n = n / 2
     }
   }
-  console.log("END");
+  console.log("End");
 </script>
 
 <script id="ch0105/22" type="x">
+
 </script>
