--- a/basic-coding.html
+++ b/basic-coding.html
@@ -267,10 +267,24 @@ else {
 <script id="ch0104/10" type="x">
   var chinese = Number(prompt())
   var maths = Number(prompt())
-  if (chinese < 60 || maths < 60) {
-    console.log(1)
-  } else {
-    console.log(0)
+  // if (chinese < 60 || maths < 60) {
+  //   console.log(1)
+  // } else {
+  //   console.log(0)
+  // }
+  var count = 0
+  if (chinese < 60) {
+    count = count + 1
+  }
+  if (maths < 60) {
+    count = count + 1
+  }
+  if (count ==1) {
+    console.log(1);
+  }
+  else if (count != 1) {
+    console.log(0);
+
   }
 </script>
 
@@ -784,5 +798,80 @@ console.log(cost)
 </script>
 
 <script id="ch0105/22" type="x">
+var bank = 0
+var pocket_money = 0
+var budget = 0
+var monthly_disposable = 0
+for (var i = 0; i < 12 ; i++) {
+  budget =  Number(prompt())
+  if (monthly_disposable < 0) {
+    console.log(-(i));
+    break
+  } else {
+  monthly_disposable = 300 + pocket_money - budget
+  pocket_money = monthly_disposable % 100
+  bank = bank + (monthly_disposable - pocket_money)
+  }
+}
+if (monthly_disposable >= 0) {
+  bank = bank + 0.2 * bank + pocket_money
+  console.log(bank)
+}
+</script>
 
+<script id="ch0105/23" type="x">
+var total = Number(prompt())
+var people = Number(prompt())
+var single_demand = null
+var quantity_demand = null
+while (total - single_demand >= 0) {
+}
+</script>
+
+<script id="2-20-1" type="x">
+  var str = ""
+  for (var count = 0; count < 7 ; count++) {
+    str = str + "#"
+    console.log(str);
+  }
+</script>
+
+<script id="2-20-2" type="x">
+  for (var i = 1; i <= 100; i++) {
+    // if (i % 5 == 0 && i % 3 != 0) {
+    //   console.log("Buzz");
+    // } else if (i % 3 == 0) {
+    //   console.log("Fizz");
+    // } else {
+    //   console.log(i);
+    // }
+    if (i % 5 == 0 && i % 3 == 0) {
+      console.log("FizzBuzz");
+    } else {
+      console.log(i);
+    }
+  }
+</script>
+
+<script id="2-20-3" type="x">
+  debugger
+  var size = 13
+  var row_odd = ""
+  var row_even = ""
+  for (var i = 1; i <= size; i++) {
+    if (i % 2 == 0) {
+      row_odd = row_odd + " "
+      row_even = row_even + "#"
+    } else if (i % 2 == 1) {
+      row_odd = row_odd + "#"
+      row_even = row_even + " "
+    }
+  }
+  for (var i = 0; i < size ; i++) {
+    if (i % 2 == 0) {
+      console.log(row_odd);
+    } else if (i % 2 != 0) {
+      console.log(row_even);
+    }
+  }
 </script>
