--- a/basic-coding.html
+++ b/basic-coding.html
@@ -875,6 +875,22 @@ console.log(keepMaxTime);
     }
   }
   console.log(count);
+</script>
+
+<script id="ch0105/27" type="x">
+  var K = Number(prompt())
+  var count = 0
+  var Sn = 1
+  var a
+  while (Sn <= K) {
+    a = (1 / (count + 2) )
+    Sn = Sn + a
+    count += 1
+  }
+  console.log(count + 1);
+</script>
+
+<script id="ch0105/x28" type="">
 
 </script>
 
