--- a/basic-coding.html
+++ b/basic-coding.html
@@ -890,7 +890,21 @@ console.log(keepMaxTime);
   console.log(count + 1);
 </script>
 
-<script id="ch0105/x28" type="">
+<script id="ch0105/x28" type="x">
+var n = Number(prompt())
+var calculate_mod = 10
+var calculate_except = 1
+var result = ""
+for (var i = 0 ; i < String(n).length; i ++) {
+  if (i == 0) {
+    result = parseInt(n % calculate_mod)
+  } else {
+  result = String(result) + " " + (parseInt(n % calculate_mod / calculate_except))
+  }
+  calculate_mod = calculate_mod * 10
+  calculate_except = calculate_except * 10
+}
+console.log(result);
 
 </script>
 
