--- a/basic-coding.html
+++ b/basic-coding.html
@@ -890,7 +890,7 @@ console.log(keepMaxTime);
   console.log(count + 1);
 </script>
 
-<script id="ch0105/x28" type="x">
+<script id="ch0105/28" type="x">
 var n = Number(prompt())
 var calculate_mod = 10
 var calculate_except = 1
