--- a/basic-coding.html
+++ b/basic-coding.html
@@ -729,6 +729,8 @@ console.log(cost)
 </script>
 
 <script id="ch0105/x17" type="x">
+  var k = Number(prompt())
+
 </script>
 
 <script id="ch0105/18" type="x">
@@ -940,6 +942,27 @@ if (m % 19 == 0 ) {
 } else {
   console.log("NO");
 }
+</script>
+
+<script id="ch0105/x31" type="x">
+  var n =  Number(prompt())
+  var m = Number(prompt())
+  for (var i = 0; i < n ; i++) {
+  }
+</script>
+
+<script id="ch0105/34" type="x">
+  var n = Number(prompt())
+  var total = 0
+  for (var count = 1 ; count <= n ;count++) {
+    var CurrentSum = 1
+    for (var i = 1; i <= count ; i++) {
+      CurrentSum = CurrentSum * i
+    }
+    total = total + CurrentSum
+    console.log(total);
+  }
+
 
 
 </script>
