--- a/basic-coding.html
+++ b/basic-coding.html
@@ -960,11 +960,19 @@ if (m % 19 == 0 ) {
       CurrentSum = CurrentSum * i
     }
     total = total + CurrentSum
-    console.log(total);
   }
+  console.log(total);
+</script>
 
-
-
+<script id="ch0105/35" type="">
+  var n = Number(prompt())
+  var e
+  for (var count = 1; count <= n ; count++) {
+    var CurrentSum = 1
+    for (var i = 1 ; i < count ; i ++) {
+      CurrentSum = CurrentSum * i
+    }
+  }
 </script>
 
 <script id="2-20-1" type="x">
