--- a/basic-coding.html
+++ b/basic-coding.html
@@ -776,7 +776,7 @@ console.log(cost)
     var people = Number(prompt())
     var c = Math.sqrt(Math.pow((0 - 30), 2) + Math.pow((0 - 40), 2))
     time = (1 + 0.5) * people + ( c / 50 * 2 )
-    sum += sum
+    sum += time
   }
   console.log(Math.ceil(sum));
 
