--- a/basic-coding.html
+++ b/basic-coding.html
@@ -728,7 +728,7 @@ console.log(cost)
   }
 </script>
 
-<script id="ch0105/x17" type="x">
+<script id="ch0105/17" type="x">
   var n = Number(prompt())
   var a = 1
   var b = 1
